--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400&display=swap');
 
 body{
-    background-image: url(ol.png);
+    background: url(ol.png) no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom;
-    min-height: 99vh;
+    font-family: sans-serif;  
 }
-.nadpis{
-    font-weight: 700;
-    margin-bottom: 20px;
-    font-family: 'Titillium Web',sans-serif;
+.login form{
+    width: 350px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    color: #fff;
+}
+.login form h1{
+    font-size: 40px;
     text-align: center;
+    margin: 40px 0;
     color: #fff;
 }
-.login{
-    width: 400px;
-    height: 50px;
-    background: #D9D9D9;
-    border-radius: 15px;
-    margin-bottom: 40px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 18px;
-    padding-left: 30px;
+.login form p{
+    font-size: 20px;
+    margin: 15px 0;
+}
+.login form input{
+    font-size: 16px;
+    width: 100%;
+    padding: 15px 10px;
     border: none;
-    }
-.inputy{
-    display: inline-grid;
-    text-align: center;
-}
-form{
-    text-align: center;
-}
-.container{
-    max-width: 1140px;
-    margin: 0px auto;
+    border-radius: 5px;
 }
 .btn{
-    width: 100px;
-    height: 45px;
-    background: #D9D9D9;
-    border-radius: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 20px 0;
+    padding: 15px 10px;
+    width: 150px;
     border: none;
+    border-radius: 5px;
+    text-align: center;
 }
+.btn-zarovnanie{
+    text-align: center;
+}
+.button-container {
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    display: flex; 
+    flex-wrap: wrap; 
+    align-items: center;
+    justify-content: center; 
+}
+
+.button-row {
+    display: flex; 
+    width: 100%; 
+    justify-content: center; 
+}
+
+.btn-questions {
+    width: 303px;
+    height: 252px; 
+    margin: 10px;
+    background-color: #979494;
+    border: none; 
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 47px;
+}
+
+
+  
+
