--- a/src/index.css
+++ b/src/index.css
@@ -109,49 +109,53 @@ body{
     width: 380px;
     height: 78px;
     background-color: #D9D9D9;
+    padding-top: 1px;
     border-radius: 14px;
-    margin-top: 15px;
 }
 .sjl-txtodpoved1{
     font-size: 30px;
     text-align: center;
-    margin: 40px 0;
+
     color: #000;
 }
 .sjl-odpoved3{
     width: 380px;
     height: 78px;
     background-color: #D9D9D9;
+    margin-top: 30px;
+    padding-top: 1px;
     border-radius: 14px;
 }
 .sjl-txtodpoved3{
     font-size: 30px;
     text-align: center;
-    margin: 40px 0;
+
     color: #000;
 }
 .sjl-odpoved2{
     width: 380px;
     height: 78px;
+    padding-top: 1px;
     background-color: #D9D9D9;
     border-radius: 14px;
 }
 .sjl-txtodpoved2{
     font-size: 30px;
     text-align: center;
-    margin: 40px 0;
     color: #000;
 }
 .sjl-odpoved4{
     width: 380px;
     height: 78px;
+    margin-top: 30px;
+    padding-top: 1px;
     background-color: #D9D9D9;
     border-radius: 14px;
 }
 .sjl-txtodpoved4{
     font-size: 30px;
     text-align: center;
-    margin: 40px 0;
+
     color: #000;
 }
 .sjl-row1{
