--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body{
 .btn-zarovnanie{
     text-align: center;
 }
-.button-container {
+.button-container  {
     position: absolute; 
     top: 50%; 
     left: 50%; 
@@ -76,15 +76,15 @@ body{
     background-color: #555;
     color: white;
 }
-.sjl-nadpis{
-    font-size: 40px;
+.quiz-nadpis{
+    font-size: 60px;
     text-align: center;
     margin: 40px 0;
     color: #fff;
 }
-.sjl-otazka{
+.quiz-otazka{
     width: 885px;
-    height: 115px;
+    height: auto;
     background-color: #D9D9D9;
     border-radius: 14px;
     position: absolute; 
@@ -92,76 +92,75 @@ body{
     left: 50%; 
     transform: translate(-50%, -50%); 
 }
-.sjl-txtotazka{
+.quiz-txtotazka{
     font-size: 30px;
     text-align: center;
     margin: 40px 0;
     color: #000;
 }
-.sjl-odpovede{
-    position: absolute; 
-    top: 70%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    display: flex;
-}
-.sjl-odpoved1{
+.quiz-odpoved1{
     width: 380px;
     height: 78px;
     background-color: #D9D9D9;
     padding-top: 1px;
     border-radius: 14px;
+    border: none;
+    margin-right: 50px;
 }
-.sjl-txtodpoved1{
+.quiz-txtodpoved1{
     font-size: 30px;
     text-align: center;
-
+    
     color: #000;
 }
-.sjl-odpoved3{
+.quiz-odpoved3{
     width: 380px;
     height: 78px;
     background-color: #D9D9D9;
     margin-top: 50px;
     padding-top: 1px;
     border-radius: 14px;
+    border: none;
+    margin-right: 50px;
 }
-.sjl-txtodpoved3{
+.quiz-txtodpoved3{
     font-size: 30px;
     text-align: center;
 
     color: #000;
 }
-.sjl-odpoved2{
+.quiz-odpoved2{
     width: 380px;
     height: 78px;
     padding-top: 1px;
     background-color: #D9D9D9;
     border-radius: 14px;
+    border: none;
 }
-.sjl-txtodpoved2{
+.quiz-txtodpoved2{
     font-size: 30px;
     text-align: center;
     color: #000;
 }
-.sjl-odpoved4{
+.quiz-odpoved4{
     width: 380px;
     height: 78px;
     margin-top: 50px;
     padding-top: 1px;
     background-color: #D9D9D9;
     border-radius: 14px;
+    border: none;
 }
-.sjl-txtodpoved4{
+.quiz-txtodpoved4{
     font-size: 30px;
     text-align: center;
 
     color: #000;
 }
-.sjl-row1{
+.quiz-row1{
     margin-right: 100px;
 }
-.sjl-points{
+.quiz-points{
     font-size: 30px;
     text-align: center;
     padding-top: 20px;
@@ -175,6 +174,16 @@ body{
     background-color: #D9D9D9;
     border-radius: 14px;
     margin-right: 100px;
+    margin-top: -111px;
 }
-
-
+.button-container-questions {
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    display: flex; 
+    flex-wrap: wrap; 
+    align-items: center;
+    justify-content: center; 
+    margin-top: 110px;
+  }
