--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,7 @@ body{
     width: 100%;
     height: 100%;
     z-index: 100;
+    background-color: rgba(255, 255, 255, 0.8);
   }
   
   .spinner {
