--- a/src/index.css
+++ b/src/index.css
@@ -160,22 +160,6 @@ body{
 .quiz-row1{
     margin-right: 100px;
 }
-.quiz-points{
-    font-size: 30px;
-    text-align: center;
-    padding-top: 20px;
-    margin: 40px 0;
-    color: #000;
-}
-.points{
-    margin-left: auto;
-    width: 250px;
-    height: 74px;
-    background-color: #D9D9D9;
-    border-radius: 14px;
-    margin-right: 100px;
-    margin-top: -111px;
-}
 .button-container-questions {
     position: absolute; 
     top: 50%; 
@@ -213,6 +197,30 @@ body{
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+  }
+  .quiz-score {
+    background-color: #f2f2f2;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  .quiz-score h2, .quiz-score h3 {
+    font-weight: normal;
+    margin: 0;
+    padding: 10px 0;
+  }
+  
+  .quiz-score h2 {
+    font-size: 28px;
+    color: #ffa500;
+  }
+  
+  .quiz-score h3 {
+    font-size: 24px;
+    color: #333;
   }
   
   
