--- a/src/index.css
+++ b/src/index.css
@@ -223,16 +223,14 @@ body{
     color: #333;
   }
   @keyframes spravne {
-    0%   {background-color: red;}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
+    0%   { background-color: green; }
+    50%  { background-color: lightgreen; }
+    100% { background-color: green; }
   }
   @keyframes nespravne {
-    0%   {background-color: red;}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
+    0%   { background-color: red; }
+    50%  { background-color: lightcoral; }
+    100% { background-color: red; }
   }
   .animate-correct{
     animation-name: spravne;
