--- a/src/index.css
+++ b/src/index.css
@@ -199,12 +199,17 @@ body{
     100% { transform: rotate(360deg); }
   }
   .quiz-score {
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
     background-color: #f2f2f2;
     border: 2px solid #ccc;
     border-radius: 5px;
     padding: 20px;
     margin-top: 20px;
     text-align: center;
+    width: 700px;
   }
   
   .quiz-score h2, .quiz-score h3 {
