--- a/src/index.css
+++ b/src/index.css
@@ -267,4 +267,20 @@ body{
   .back-button {
     margin-top: 20px;
     text-align: center;
-  } 
+  }
+  .quiz-timer {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 3px solid #ccc;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #000;
+    text-align: center;
+  }
