--- a/src/index.css
+++ b/src/index.css
@@ -247,3 +247,96 @@ body{
   background-color: #000;
   text-align: center;
 }
+nav {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+nav label {
+  display: block;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+  position: relative;
+  margin-left: 25px;
+}
+
+nav label span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 100%;
+  background: #000;
+  transition: transform 0.2s ease-out;
+  transform-origin: center center;
+}
+nav label span:nth-child(1) {
+  top: 0;
+}
+nav label span:nth-child(2), nav label span:nth-child(3) {
+  top: 13px;
+}
+nav label span:nth-child(3) {
+  top: 26px;
+}
+nav input[type="checkbox"] {
+  display: none;
+}
+nav input[type="checkbox"]:checked + label span:nth-child(1) {
+  transform: translateY(13px) rotate(45deg);
+}
+nav input[type="checkbox"]:checked + label span:nth-child(2) {
+  opacity: 0;
+}
+nav input[type="checkbox"]:checked + label span:nth-child(3) {
+  transform: translateY(-13px) rotate(-45deg);
+}
+nav .menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
+}
+nav input[type="checkbox"]:checked + label + .menu {
+  max-height: 1000px;
+}
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+nav ul li {
+  border-top: 1px solid #eee;
+}
+nav ul li:first-child {
+  border-top: none;
+}
+nav ul li a {
+  display: block;
+  padding: 10px 20px;
+  color: #000;
+  text-decoration: none;
+}
+nav ul li a:hover {
+  background: #eee;
+}
+.home{
+text-align-last: center;
+color: white;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+display: block;
+flex: auto;
+margin-right: 60px;
+}
+.QUIZ_dropdown{
+  background-color: #1125ab;
+}
