--- a/src/index.css
+++ b/src/index.css
@@ -247,96 +247,69 @@ body{
   background-color: #000;
   text-align: center;
 }
-nav {
-  position: relative;
+.App {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.navbar {
+  display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: #333;
+  color: #fff;
 }
 
-nav label {
-  display: block;
-  width: 40px;
-  height: 30px;
-  cursor: pointer;
-  position: relative;
-  margin-left: 25px;
-}
-
-nav label span {
-  display: block;
-  position: absolute;
-  height: 4px;
-  width: 100%;
-  background: #000;
-  transition: transform 0.2s ease-out;
-  transform-origin: center center;
-}
-nav label span:nth-child(1) {
-  top: 0;
-}
-nav label span:nth-child(2), nav label span:nth-child(3) {
-  top: 13px;
-}
-nav label span:nth-child(3) {
-  top: 26px;
-}
-nav input[type="checkbox"] {
-  display: none;
-}
-nav input[type="checkbox"]:checked + label span:nth-child(1) {
-  transform: translateY(13px) rotate(45deg);
-}
-nav input[type="checkbox"]:checked + label span:nth-child(2) {
-  opacity: 0;
-}
-nav input[type="checkbox"]:checked + label span:nth-child(3) {
-  transform: translateY(-13px) rotate(-45deg);
-}
-nav .menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  overflow: hidden;
-  max-height: 0;
-  transition: max-height 0.2s ease-out;
-}
-nav input[type="checkbox"]:checked + label + .menu {
-  max-height: 1000px;
-}
-nav ul {
-  list-style: none;
-  padding: 0;
+.navbar h1 {
   margin: 0;
 }
-nav ul li {
-  border-top: 1px solid #eee;
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 100vh;
+  background-color: #eee;
+  padding: 1rem;
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(-100%);
 }
-nav ul li:first-child {
-  border-top: none;
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
 }
-nav ul li a {
-  display: block;
-  padding: 10px 20px;
-  color: #000;
-  text-decoration: none;
+
+.sidebar ul li {
+  padding: 0.5rem 0;
 }
-nav ul li a:hover {
-  background: #eee;
+
+.main-content {
+  flex: 1;
+  padding: 1rem;
 }
-.home{
-text-align-last: center;
-color: white;
-padding: 14px 16px;
-text-decoration: none;
-font-size: 17px;
-display: block;
-flex: auto;
-margin-right: 60px;
+
+@media screen and (min-width: 768px) {
+  .sidebar {
+    transform: translateX(0);
+  }
+
+  .main-content {
+    margin-left: 200px;
+  }
 }
-.QUIZ_dropdown{
-  background-color: #1125ab;
+
+.button_menu {
+width: 10px;
+height: 10px;
+}
+
+.margin_menu{
+  margin-top: 15px;
+  width: 10px;
+  height: 10px;
+  margin-left: 10px;
 }
