--- a/src/index.css
+++ b/src/index.css
@@ -269,18 +269,23 @@ body{
 .sidebar {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -250px;
   width: 200px;
   height: 100vh;
   background-color: #eee;
   padding: 1rem;
-  transition: transform 0.3s ease-in-out;
-  transform: translateX(-100%);
+  transition: left 0.5s ease-in-out;
+}
+
+.sidebar.show {
+  left: 0;
 }
 
 .sidebar ul {
   list-style: none;
   padding: 0;
+  margin-top: 25px;
+  margin-left: 25px;
 }
 
 .sidebar ul li {
@@ -303,15 +308,22 @@ body{
 }
 
 .button_menu {
-width: 10px;
-height: 10px;
+  width: 30px;
+  height: 30px;
+  background-image: url('src/burger-menu.svg');
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: center;
 }
-
 .margin_menu{
-  margin-top: 15px;
-  width: 10px;
-  height: 10px;
-  margin-left: 10px;
+  width: 30px;
+  height: 30px;
+  background-image: url('src/cross.svg');
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: center;
+  margin-top: 10px;
+  margin-left: 8px;
 }
 .results-table {
   border-collapse: collapse;
