--- a/src/index.css
+++ b/src/index.css
@@ -229,6 +229,9 @@ body{
   cursor: pointer;
   margin: 20px;
 }
+.back-button1{
+text-align-last: center;
+}
 .results_button:hover{
   background-color: #AE481B;
 }
