--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     font-family: sans-serif;  
+    margin: 0px;
 }
 .login form{
     width: 350px;
@@ -330,8 +331,7 @@ text-align-last: center;
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: center;
-  margin-top: 10px;
-  margin-left: 8px;
+  margin-top: 2px;
 }
 .results-table {
   border-collapse: collapse;
