--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@ body{
     border-radius: 5px;
     text-align: center;
 }
+.btn:hover{
+  background-color: #a1a1a1;
+  color: white;
+}
 .btn-zarovnanie{
     text-align: center;
 }
